; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_trans.c_iwl_pcie_load_given_ucode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_trans.c_iwl_pcie_load_given_ucode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_trans = type { i32 }
%struct.fw_img = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@IWL_UCODE_SECTION_MAX = common dso_local global i32 0, align 4
@CSR_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwl_trans*, %struct.fw_img*)* @iwl_pcie_load_given_ucode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwl_pcie_load_given_ucode(%struct.iwl_trans* %0, %struct.fw_img* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iwl_trans*, align 8
  %5 = alloca %struct.fw_img*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.iwl_trans* %0, %struct.iwl_trans** %4, align 8
  store %struct.fw_img* %1, %struct.fw_img** %5, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %38, %2
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @IWL_UCODE_SECTION_MAX, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %41

12:                                               ; preds = %8
  %13 = load %struct.fw_img*, %struct.fw_img** %5, align 8
  %14 = getelementptr inbounds %struct.fw_img, %struct.fw_img* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %12
  br label %41

23:                                               ; preds = %12
  %24 = load %struct.iwl_trans*, %struct.iwl_trans** %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.fw_img*, %struct.fw_img** %5, align 8
  %27 = getelementptr inbounds %struct.fw_img, %struct.fw_img* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i64 %30
  %32 = call i32 @iwl_pcie_load_section(%struct.iwl_trans* %24, i32 %25, %struct.TYPE_2__* %31)
  store i32 %32, i32* %7, align 4
  %33 = load i32, i32* %7, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %23
  %36 = load i32, i32* %7, align 4
  store i32 %36, i32* %3, align 4
  br label %45

37:                                               ; preds = %23
  br label %38

38:                                               ; preds = %37
  %39 = load i32, i32* %6, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %6, align 4
  br label %8

41:                                               ; preds = %22, %8
  %42 = load %struct.iwl_trans*, %struct.iwl_trans** %4, align 8
  %43 = load i32, i32* @CSR_RESET, align 4
  %44 = call i32 @iwl_write32(%struct.iwl_trans* %42, i32 %43, i32 0)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %41, %35
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @iwl_pcie_load_section(%struct.iwl_trans*, i32, %struct.TYPE_2__*) #1

declare dso_local i32 @iwl_write32(%struct.iwl_trans*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
